tests/exposure_test_with_real_pod_and_namespace/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: np1
  namespace: hello-world
spec:
  podSelector:
    matchLabels:
      app: a-app
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ns2
      podSelector:
        matchLabels:
          app: b-app
  policyTypes:
  - Ingress
  - Egress # deny egress
