test_outputs/connlist/exposure_test_with_real_pod_and_namespace_exposure_output.txt
0.0.0.0-255.255.255.255[External] => ns2/workload-b[Deployment] : All Connections
ns2/workload-b[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
ns2/workload-b[Deployment] => hello-world/workload-a[Deployment] : All Connections

Exposure Analysis Result:
Egress Exposure:
ns2/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
ns2/workload-b[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
ns2/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
ns2/workload-b[Deployment] 	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
ns2/workload-b[Deployment] is not protected on Egress
ns2/workload-b[Deployment] is not protected on Ingress
